--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".DetailsViewActivity">
 
     <ImageView
         android:id="@+id/poke_image"
@@ -26,7 +26,7 @@
         android:textSize="25dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_text" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/poke_num"
@@ -35,7 +35,7 @@
         android:layout_margin="20dp"
         android:text="Number"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_text" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/poke_type1"
@@ -62,7 +62,7 @@
         app:layout_constraintTop_toBottomOf="@id/poke_type1">
 
         <LinearLayout
-            android:id="@+id/scrollview_ll"
+            android:id="@+id/scrollview_ll_details_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -74,23 +74,6 @@
         </LinearLayout>
     </ScrollView>
 
-    <EditText
-        android:id="@+id/search_text"
-        android:layout_width="0dp"
-        android:hint="Enter Pokemon Number"
-        android:layout_margin="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/search_button"
-        android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/search_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/search_text"
-        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
