--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:hint="Enter name or number of Pokemon"
+        android:hint="@string/SearchHintEdit"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_search"
         android:id="@+id/edit_search"
@@ -16,7 +16,7 @@
 
     <Button
         android:id="@+id/button_search"
-        android:text="Search"
+        android:text="@string/SearchButtonText"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
