--- a/Sprint3/app/src/main/res/layout/activity_pokemon_details.xml
+++ b/Sprint3/app/src/main/res/layout/activity_pokemon_details.xml
@@ -16,28 +16,28 @@
         android:id="@+id/text_view_pokemon_detail_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Id: 1"
+        android:text="Id: #A"
         app:layout_constraintTop_toBottomOf="@+id/image_view_pokemon_sprite" />
 
     <TextView
         android:id="@+id/text_view_pokemon_detail_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Name: Bulbasaur"
+        android:text="Name: #A"
         app:layout_constraintTop_toBottomOf="@+id/text_view_pokemon_detail_id" />
 
     <TextView
         android:id="@+id/text_view_pokemon_detail_types"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Types: Wind, Water"
+        android:text="Types: #A, #B"
         app:layout_constraintTop_toBottomOf="@+id/text_view_pokemon_detail_name" />
 
     <TextView
         android:id="@+id/text_view_pokemon_detail_abilities"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Abilities: A, B, C"
+        android:text="Abilities: #A, #B, #C"
         app:layout_constraintTop_toBottomOf="@+id/text_view_pokemon_detail_types" />
 
 </android.support.constraint.ConstraintLayout>
