--- a/Sprint3/app/src/main/res/layout/activity_pokemon_details.xml
+++ b/Sprint3/app/src/main/res/layout/activity_pokemon_details.xml
@@ -37,7 +37,17 @@
         android:id="@+id/text_view_pokemon_detail_abilities"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Abilities: #A, #B, #C"
+        android:text="Abilities: "
         app:layout_constraintTop_toBottomOf="@+id/text_view_pokemon_detail_types" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_pokemon_detail_abilities"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_pokemon_detail_abilities"
+        tools:listitem="@layout/pokemon_ability_layout">
+
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
