--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,12 +22,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <android.support.v7.widget.RecyclerView
-        app:layout_constraintBottom_toBottomOf="parent"
+    <LinearLayout
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/button_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         tools:listitem="@layout/item_view_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
