--- a/Sprint3/app/src/main/res/layout/activity_main.xml
+++ b/Sprint3/app/src/main/res/layout/activity_main.xml
@@ -26,10 +26,17 @@
         android:id="@+id/recycler_view_pokemon_search_results"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button_favorite_pokemons"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_pokemon_search"
         tools:layout_editor_absoluteX="0dp">
 
     </android.support.v7.widget.RecyclerView>
+
+    <Button
+        android:id="@+id/button_favorite_pokemons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Favorites"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
