--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,25 +7,28 @@
     tools:context=".MainActivity">
 
     <EditText
+        android:inputType="number"
         android:id="@+id/edit_text_search"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Search by Pokemon Number"
+        android:hint="Search by Pokemon Number 1-807"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/search_button"
+        app:layout_constraintEnd_toStartOf="@id/button_catch"
         app:layout_constraintTop_toTopOf="parent" />
     <Button
-        android:id="@+id/search_button"
-        android:text="Search"
+        android:id="@+id/button_catch"
+        android:text="Catch"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <ScrollView
+        android:id="@+id/scroll_view_saved_list"
         app:layout_constraintTop_toBottomOf="@id/edit_text_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/scroll_view_pokedex"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <LinearLayout
@@ -33,6 +36,21 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></LinearLayout>
+    </ScrollView>
+
+    <ScrollView
+        android:id="@+id/scroll_view_pokedex"
+        android:paddingTop="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="400dp">
+        <LinearLayout
+            android:id="@+id/linear_layout_scroll_child_pokedex_list"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></LinearLayout>
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
