--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/edit_text_search"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Search by Pokemon Number 1-807"
+        android:hint="Search by Pokemon Number 1...807"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_catch"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,29 +28,33 @@
         app:layout_constraintTop_toBottomOf="@id/edit_text_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/scroll_view_pokedex"
+        app:layout_constraintHeight_max="200dp"
+        app:layout_constraintHeight_default="wrap"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <LinearLayout
-        android:id="@+id/linear_layout_scroll_child_name_list"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></LinearLayout>
+        android:layout_height="200dp">
+
+        <LinearLayout
+            android:id="@+id/linear_layout_scroll_child_name_list"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </ScrollView>
 
     <ScrollView
         android:id="@+id/scroll_view_pokedex"
         android:paddingTop="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:fitsSystemWindows="true"
+        app:layout_constraintTop_toBottomOf="@id/scroll_view_saved_list"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="400dp">
+        android:layout_height="wrap_content">
+
         <LinearLayout
             android:id="@+id/linear_layout_scroll_child_pokedex_list"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></LinearLayout>
+            android:layout_height="wrap_content" />
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
