--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -5,31 +5,36 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#0099cc"
+    android:id="@+id/ll_parent"
     tools:context=".FullscreenActivity"
-
     >
-<ImageView
-    android:id="@+id/image_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    />
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="369dp">
-
- <TextView
-     android:id="@+id/text_deteail"
-     android:lines="30"
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content" />
-    </ScrollView>
-
     <Button
-                android:id="@+id/dummy_button"
+        android:id="@+id/dummy_button"
 
-                             android:text="Go back to search"
+        android:text="Go back to search"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
+    android:id="@+id/ll_child"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/text_deteail"
+        android:textSize="25sp"
+
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    </ScrollView>
+
+
 
 </LinearLayout>
 
