--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
     <EditText
         android:id="@+id/et_entry"
         android:imeOptions="actionDone"
+        android:textSize="30sp"
         android:lines="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
