--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -8,12 +8,29 @@
     android:id="@+id/ll_parent"
     tools:context=".FullscreenActivity"
     >
-    <Button
-        android:id="@+id/dummy_button"
+    <LinearLayout
 
-        android:text="Go back to search"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/dummy_button"
+
+
+            android:text="Go back to search"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
+
+        <Switch
+            android:text="saved"
+            android:id="@+id/switch_saved"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textOff="No"
+            android:textOn="Yes"/>
+    </LinearLayout>
+
 
     <ScrollView
         android:layout_width="match_parent"
