--- a/PokemonApp/app/src/main/res/layout/activity_get_pokemon.xml
+++ b/PokemonApp/app/src/main/res/layout/activity_get_pokemon.xml
@@ -11,10 +11,10 @@
     <ImageView
             android:id="@+id/pokemon_Sprite"
             android:src="@drawable/ic_launcher_background"
-            android:layout_marginLeft="150dp"
+            android:layout_marginLeft="100dp"
             android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="220dp"
+            android:layout_height="220dp"/>
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginVertical="10dp"
@@ -24,13 +24,26 @@
                     android:layout_height="match_parent">
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
+                          android:id="@+id/test"
                           android:orientation="vertical">
+                <TextView
+                        android:textStyle="bold"
+                        android:text="ID"
+                        android:textAlignment="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
 
             <TextView
                     android:id="@+id/pokemon_id"
                     android:textAlignment="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
+                <TextView
+                        android:textStyle="bold"
+                        android:text="Pokemon Name"
+                        android:textAlignment="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
 
             <TextView
                     android:id="@+id/pokemon_Name"
@@ -38,11 +51,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <TextView
+                        android:textStyle="bold"
+                        android:text="Pokemon Abilities"
+                        android:textAlignment="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
                         android:id="@+id/pokemon_abilities"
+                        android:textAlignment="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:textStyle="bold"
+                        android:text="Pokemon Types"
+                        android:textAlignment="center"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                 <TextView
                         android:id="@+id/pokemon_types"
+                        android:textAlignment="center"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
             </LinearLayout>
