--- a/PokemonApp/app/src/main/res/layout/activity_main.xml
+++ b/PokemonApp/app/src/main/res/layout/activity_main.xml
@@ -30,12 +30,18 @@
                 android:background="@android:drawable/ic_menu_search"/>
     </LinearLayout>
         <LinearLayout
-                android:id="@+id/layout_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
             <ScrollView android:layout_width="match_parent"
                         android:layout_height="wrap_content">
+                <LinearLayout
+                        android:id="@+id/layout_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                </LinearLayout>
 
 
             </ScrollView>
