--- a/PokemonApp/app/src/main/res/layout/activity_main.xml
+++ b/PokemonApp/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
                 android:id="@+id/et_pokemon_no"
                 android:layout_width="317dp"
                 android:layout_height="wrap_content"
-                android:hint="Enter Pokemon No"
+                android:hint="Search Pokemon by ID or Name"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
